data/derived/comb/progs/unify/prog6695.ml.out
Characters 31-32:
  let _ = stringOfList (fun x -> x) ["foo"];;
                                 ^
Error: This expression has type string but an expression was expected of type
         'a -> string
